# Liquifact-contracts

./: .gitignore  GOLD_STANDARD_TEST_SUMMARY.md  PR_SUMMARY.md  PR_SUMMARY_MAX_UNIQUE_INVESTORS.md  README.md  test_compile.sh
.github/workflows/: ci.yml
docs/: ESCROW_TOKEN_INTEGRATION_CHECKLIST.md  OPERATOR_RUNBOOK.md  audit-handoff-escrow.md  escrow-dependency-policy.md  escrow-gas-storage-notes.md  escrow-host-model.md  escrow-indexer.md  escrow-investor-caps.md  escrow-numeric-model.md  escrow-read-api.md  escrow-sim-stellar-cli.md  escrow-sme-collateral.md
docs/adr/: ADR-001-state-model.md  ADR-002-auth-boundaries.md  ADR-003-settlement-flow.md  ADR-004-legal-hold.md  ADR-005-tiered-yield.md  ADR-006-dust-sweep-and-token-safety.md  README.md
escrow/: Cargo.toml  README.md
escrow/proptest-regressions/: test.txt
escrow/src/: external_calls.rs  lib.rs  test.rs  test_allowlist.rs  test_funding_target.rs  test_token_integration.rs
escrow/src/test/: admin.rs  cap_validation.rs  external_calls.rs  external_calls_mocked.rs  funding.rs  init.rs  integration.rs  legal_hold.rs  properties.rs  settlement.rs
